# FVS_Pace_2016_AIC_Orco

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  ideas.txt
include/Algo/: algo.hpp  greedy.hpp  precomputations.hpp
include/Graph/: graph.hpp  multigraph.hpp
script/: afficheur.py
src/: CMakeLists.txt  FVS_main  Makefile  cmake_install.cmake  graph.cpp  graph.hpp  main.cpp
src/Algo/: CMakeLists.txt  algo.cpp  greedy.cpp  precomputations.cpp
src/Graph/: CMakeLists.txt  Makefile  cmake_install.cmake  graph.cpp  graph.hpp  multigraph.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  graph_test.cpp
test/greedy/: CMakeLists.txt  greedy_test.cpp
